--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\saadi\AppData\Local\Temp\testng-eclipse--55503742\testng-customsuite.xml</span>
+                    <span>C:\Users\saadi\AppData\Local\Temp\testng-eclipse-466639053\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dataProvideur.DataProvideurFreeCRM" hash-for-method="createNewContactFreeCRM(youcef, hargas, vertussa, Lead)">createNewContactFreeCRM(youcef, hargas, vertussa, Lead)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="seleniumMethods.ReadPDF" hash-for-method="readPDFFromInternet">readPDFFromInternet</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dataProvideur.DataProvideurFreeCRM" hash-for-method="createNewContactFreeCRM(nacer , zimu, amazon, Contact)">createNewContactFreeCRM(nacer , zimu, amazon, Contact)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dataProvideur.DataProvideurFreeCRM" hash-for-method="createNewContactFreeCRM(samir, ait ourab, google, Lead)">createNewContactFreeCRM(samir, ait ourab, google, Lead)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dataProvideur.DataProvideurFreeCRM" hash-for-method="createNewContactFreeCRM(ferhat, saadi, adp, Contact)">createNewContactFreeCRM(ferhat, saadi, adp, Contact)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="seleniumMethods.ReadPDF" hash-for-method="readPDFFromLocal">readPDFFromLocal</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,39 +125,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">dataProvideur.DataProvideurFreeCRM</span>
+              <span class="class-name">seleniumMethods.ReadPDF</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createNewContactFreeCRM(youcef, hargas, vertussa, Lead)">
-                  </a> <!-- createNewContactFreeCRM(youcef, hargas, vertussa, Lead) -->
-                  <span class="method-name">createNewContactFreeCRM</span>
-                  <span class="parameters">(youcef, hargas, vertussa, Lead)</span>
+                  <a name="readPDFFromInternet">
+                  </a> <!-- readPDFFromInternet -->
+                  <span class="method-name">readPDFFromInternet</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="createNewContactFreeCRM(nacer , zimu, amazon, Contact)">
-                  </a> <!-- createNewContactFreeCRM(nacer , zimu, amazon, Contact) -->
-                  <span class="method-name">createNewContactFreeCRM</span>
-                  <span class="parameters">(nacer , zimu, amazon, Contact)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="createNewContactFreeCRM(samir, ait ourab, google, Lead)">
-                  </a> <!-- createNewContactFreeCRM(samir, ait ourab, google, Lead) -->
-                  <span class="method-name">createNewContactFreeCRM</span>
-                  <span class="parameters">(samir, ait ourab, google, Lead)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="createNewContactFreeCRM(ferhat, saadi, adp, Contact)">
-                  </a> <!-- createNewContactFreeCRM(ferhat, saadi, adp, Contact) -->
-                  <span class="method-name">createNewContactFreeCRM</span>
-                  <span class="parameters">(ferhat, saadi, adp, Contact)</span>
+                  <a name="readPDFFromLocal">
+                  </a> <!-- readPDFFromLocal -->
+                  <span class="method-name">readPDFFromLocal</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -175,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\saadi\AppData\Local\Temp\testng-eclipse--55503742\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\saadi\AppData\Local\Temp\testng-eclipse-466639053\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;dataProvideur.DataProvideurFreeCRM&quot;/&gt;
+      &lt;class name=&quot;seleniumMethods.ReadPDF&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -224,28 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createNewContactFreeCRM')
-data.setCell(0, 2, 'dataProvideur.DataProvideurFreeCRM')
-data.setCell(0, 3, 40963);
+data.setCell(0, 1, 'readPDFFromInternet')
+data.setCell(0, 2, 'seleniumMethods.ReadPDF')
+data.setCell(0, 3, 8906);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'createNewContactFreeCRM')
-data.setCell(1, 2, 'dataProvideur.DataProvideurFreeCRM')
-data.setCell(1, 3, 33159);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'createNewContactFreeCRM')
-data.setCell(2, 2, 'dataProvideur.DataProvideurFreeCRM')
-data.setCell(2, 3, 28929);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'createNewContactFreeCRM')
-data.setCell(3, 2, 'dataProvideur.DataProvideurFreeCRM')
-data.setCell(3, 3, 18451);
+data.setCell(1, 1, 'readPDFFromLocal')
+data.setCell(1, 2, 'seleniumMethods.ReadPDF')
+data.setCell(1, 3, 2645);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -271,55 +235,15 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">dataProvideur.DataProvideurFreeCRM</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
+              <div class="chronological-class-name">seleniumMethods.ReadPDF</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">readPDFFromInternet</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">createNewContactFreeCRM(youcef, hargas, vertussa, Lead)</span>
-                <span class="method-start">8439 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeUp</span>
-                <span class="method-start">26893 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">27652 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">createNewContactFreeCRM(samir, ait ourab, google, Lead)</span>
-                <span class="method-start">45460 ms</span>
+                <span class="method-name">readPDFFromLocal</span>
+                <span class="method-start">8916 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeUp</span>
-                <span class="method-start">74389 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">75148 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">createNewContactFreeCRM(nacer , zimu, amazon, Contact)</span>
-                <span class="method-start">95984 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeUp</span>
-                <span class="method-start">136948 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">137677 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">createNewContactFreeCRM(ferhat, saadi, adp, Contact)</span>
-                <span class="method-start">153561 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeUp</span>
-                <span class="method-start">186722 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
