--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:10:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProvideurFreeCRM.setUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:11:04</td>   <td>8438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvideurFreeCRM.createNewContactFreeCRM(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">createNewContactFreeCRM</td> 
-  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:11:22</td>   <td>26892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProvideurFreeCRM.closeUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&lt;&lt;closeUp</td> 
-<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:11:23</td>   <td>27651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProvideurFreeCRM.setUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:11:41</td>   <td>45459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvideurFreeCRM.createNewContactFreeCRM(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">createNewContactFreeCRM</td> 
-  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:12:10</td>   <td>74389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProvideurFreeCRM.closeUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&lt;&lt;closeUp</td> 
-<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:12:11</td>   <td>75147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProvideurFreeCRM.setUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:12:31</td>   <td>95983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvideurFreeCRM.createNewContactFreeCRM(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">createNewContactFreeCRM</td> 
-  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:13:12</td>   <td>136947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProvideurFreeCRM.closeUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&lt;&lt;closeUp</td> 
-<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:13:13</td>   <td>137676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProvideurFreeCRM.setUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:13:29</td>   <td>153560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvideurFreeCRM.createNewContactFreeCRM(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">createNewContactFreeCRM</td> 
-  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/21 23:14:02</td>   <td>186721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProvideurFreeCRM.closeUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&lt;&lt;closeUp</td> 
-<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="78f375">  <td>20/05/31 12:42:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadPDF.readPDFFromInternet()[pri:0, instance:seleniumMethods.ReadPDF@6d4b1c02]">readPDFFromInternet</td> 
+  <td>main@1414521932</td>   <td></td> </tr>
+<tr bgcolor="78f375">  <td>20/05/31 12:42:58</td>   <td>8916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadPDF.readPDFFromLocal()[pri:0, instance:seleniumMethods.ReadPDF@6d4b1c02]">readPDFFromLocal</td> 
+  <td>main@1414521932</td>   <td></td> </tr>
 </table>
